[workspace]
resolver = "2"
members = [
  "contracts",
    "packages/constants",
    "packages/contract-utils/*",
    "packages/test-utils/*",
    "packages/tokens/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["jamesbachini"]
repository = "https://github.com/jamesbachini/OZStellarNFT"

[workspace.dependencies]
soroban-sdk = "22.0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
stellar-constants = { path = "packages/constants" }
stellar-default-impl-macro = { path = "packages/contract-utils/default-impl-macro" }
stellar-event-assertion = { path = "packages/test-utils/event-assertion" }
stellar-fungible = { path = "packages/tokens/fungible" }
stellar-non-fungible = { path = "packages/tokens/non-fungible" }
stellar-pausable = { path = "packages/contract-utils/pausable" }
stellar-pausable-macros = { path = "packages/contract-utils/pausable-macros" }
stellar-upgradeable = { path = "packages/contract-utils/upgradeable" }
stellar-upgradeable-macros = { path = "packages/contract-utils/upgradeable-macros" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
